samples/_failures_safe/1761633726_29ce36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c40c3285.c:153:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  153 | const char* token_type
      | ^~~~~
